:+1: Add API for login, register, token authentication and setup model prisma as convention.
